Mirroring the field description in the UI (#2479)

--- a/downstream/modules/platform/proc-aap-create_controller.adoc
+++ b/downstream/modules/platform/proc-aap-create_controller.adoc
@@ -15,5 +15,5 @@ Use the following steps to create an AutomationController custom resource object
 .. Enter a name for the new deployment.
 .. In *Advanced configurations*:
 ... From the *Secret Key* list, select your xref:create-secret-key-secret_aap-migration[secret key secret].
-... From the old *Database Configuration Secret* list, select the old xref:create-postresql-secret_aap-migration[postgres configuration secret].
+... From the *Old Database Configuration Secret* list, select the xref:create-postresql-secret_aap-migration[old postgres configuration secret].
 .. Click btn:[Create].
