Update redis_tls_cert and key vars in appendix
Update the relevant redis_tls_cert and redis_tls_key vars in the inventory variables appendix for the containerized installer

DOCS - Redis_tls_cert and redis_tls_key missing from inventory vars appendix

https://issues.redhat.com/browse/AAP-32788

--- a/downstream/modules/platform/ref-eda-controller-variables.adoc
+++ b/downstream/modules/platform/ref-eda-controller-variables.adoc
@@ -167,9 +167,17 @@ Default = `false`
 
 | | `eda_redis_password` | Redis {EDAcontroller} password (for many nodes).
 
-| | `eda_redis_tls_cert` | {EDAcontroller} Redis TLS certificate.
+| | `eda_redis_tls_cert` | _Optional_
 
-| | `eda_redis_tls_key` | {EDAcontroller} Redis TLS key.
+`/path/to/edaredis.crt`
+
+Location of the {EDAcontroller} Redis TLS certificate.
+
+| | `eda_redis_tls_key` | _Optional_
+
+`/path/to/edaredis.key`
+
+Location of the {EDAcontroller} Redis TLS key.
 
 | | `eda_redis_username` | Redis {EDAcontroller} username (for many nodes).
 
