--- a/downstream/modules/platform/ref-gateway-variables.adoc
+++ b/downstream/modules/platform/ref-gateway-variables.adoc
@@ -133,9 +133,17 @@ Default = `false`
 
 | | `gateway_redis_password` | Redis {Gateway} password.
 
-| | `gateway_redis_tls_cert` | {GatewayStart} Redis TLS certificate.
+| | `gateway_redis_tls_cert` | _Optional_
 
-| | `gateway_redis_tls_key` | {GatewayStart} Redis TLS key.
+`/path/to/gatewayredis.crt`
+
+Location of the {GatewayStart} Redis TLS certificate.
+
+| | `gateway_redis_tls_key` | _Optional_
+
+`/path/to/gatewayredis.key`
+
+Location of the {GatewayStart} Redis TLS key.
 
 | | `gateway_redis_username` | Redis {Gateway} username.
 
