--- a/downstream/modules/platform/ref-general-inventory-variables.adoc
+++ b/downstream/modules/platform/ref-general-inventory-variables.adoc
@@ -14,7 +14,7 @@ Default = `false`
 
 | |`ca_tls_cert` | Define a Certification Authority certificate here along with a matching key in `ca_tls_key` when you want the installer to create leaf certificates for each product for you.
 
-| |`ca_tls_key` | Define the key for a Certication Authority certificate here for the matching certificate in `ca_tls_cert` when you want the installer to create leaf certs for each product for you.
+| |`ca_tls_key` | Define the key for a Certification Authority certificate here for the matching certificate in `ca_tls_cert` when you want the installer to create leaf certificates for each product for you.
 
 | |`ca_tls_remote` |TLS CA remote files.
 
@@ -61,7 +61,7 @@ Default = `ansible-automation-platform-25`
 | |`registry_ns_rhel` |RHEL registry namespace.
 
 Default = `rhel8`
-| `redis_mode` | | Redis can be colocated with automationgateway, automationhub, and automationedacontroller nodes. 
+| `redis_mode` | | Redis can be colocated with {Gateway}, {HubName}, and {EDAcontroller} nodes. 
 
 Default = cluster
 | `registry_password` |`registry_password` | This variable is only required if a non-bundle installer is used.
