updates based on peer review feedback

--- a/downstream/modules/platform/ref-gateway-variables.adoc
+++ b/downstream/modules/platform/ref-gateway-variables.adoc
@@ -137,13 +137,13 @@ Default = `false`
 
 `/path/to/gatewayredis.crt`
 
-Location of the {GatewayStart} Redis TLS certificate.
+Location of the {Gateway} Redis TLS certificate.
 
 | | `gateway_redis_tls_key` | _Optional_
 
 `/path/to/gatewayredis.key`
 
-Location of the {GatewayStart} Redis TLS key.
+Location of the {Gateway} Redis TLS key.
 
 | | `gateway_redis_username` | Redis {Gateway} username.
 
