AAP-29905 Additional updates for final draft

--- a/downstream/modules/eda/proc-eda-delete-controller-token.adoc
+++ b/downstream/modules/eda/proc-eda-delete-controller-token.adoc
@@ -2,7 +2,7 @@
 
 = Deleting controller tokens
 
-The first step in switching to {PlatformName} credentials is to delete any existing controller tokens.
+Before  {PlatformName} credentials is to delete any existing controller tokens.
 
 .Prerequisites
 * You have deleted all rulebook activations that use controller tokens.
