--- a/downstream/modules/eda/proc-eda-delete-rulebook-activations-with-cont-tokens.adoc
+++ b/downstream/modules/eda/proc-eda-delete-rulebook-activations-with-cont-tokens.adoc
@@ -1,16 +1,12 @@
 [id="eda-delete-rulebook-activations-with-cont-tokens"]
 
-= Deleting rulebook activations associated with controller tokens
+= Deleting rulebook activations with controller tokens
 
 After deleting your controller tokens, you must delete the rulebook activations that were associated with them.
 
-.Prerequisites
-* You have deleted your previous controller tokens. 
-* You have identified which rulebook activations are associated with the deleted controller tokens. 
-
 .Procedure
 
-. Log in to the {Ansible Automation Platform} Dashboard.
+. Log in to the {PlatformNameShort} Dashboard.
 . From the top navigation panel, select {MenuADRulebookActivations}.
 . Select the rulebook activations that have controller tokens.
 . Select the btn:[More Actions] icon *{MoreActionsIcon}* next to the *Rulebook Activation enabled/disabled* toggle.
