AAP-29905 More tweaks to ensure clear instructions

--- a/downstream/modules/eda/proc-eda-delete-controller-token.adoc
+++ b/downstream/modules/eda/proc-eda-delete-controller-token.adoc
@@ -2,7 +2,7 @@
 
 = Deleting controller tokens
 
-Before  {PlatformName} credentials is to delete any existing controller tokens.
+Before you can set up {PlatformName} credentials, you must delete any existing controller tokens.
 
 .Prerequisites
 * You have deleted all rulebook activations that use controller tokens.
