--- a/downstream/modules/eda/proc-eda-set-up-rhaap-credential.adoc
+++ b/downstream/modules/eda/proc-eda-set-up-rhaap-credential.adoc
@@ -12,7 +12,7 @@ You can create a {PlatformName} credential type to run your rulebook activations
 
 .Procedure
 
-. Log in to the {PlatformNameShort}.
+. Log in to the {PlatformNameShort} Dashboard.
 . From the navigation panel, select {MenuADCredentials}.
 . Click btn:[Create credential].
 . Insert the following:
@@ -34,7 +34,7 @@ For {EDAcontroller} {PlatformVers} with {ControllerName} 2.4, use the following 
 
 For {PlatformNameShort} {PlatformVers}, use the following example: \https://<your_gateway_host>/api/controller/
 ====
-. Enter a valid *Username* and *Password* or *Oauth Token*. 
+. Enter a valid *Username* and *Password*, or *Oauth Token*. 
 . Click btn:[Create credential].
 
 After you create this credential, you can use it for configuring your rulebook activations.
