--- a/downstream/modules/eda/proc-eda-delete-rulebook-activations-with-cont-tokens.adoc
+++ b/downstream/modules/eda/proc-eda-delete-rulebook-activations-with-cont-tokens.adoc
@@ -2,7 +2,7 @@
 
 = Deleting rulebook activations with controller tokens
 
-After deleting your controller tokens, you must delete the rulebook activations that were associated with them.
+To replace the controller tokens, you must delete the rulebook activations that were associated with them.
 
 .Procedure
 
