AAP-29905 Corrected note in assembly for RH AAP credentials

--- a/downstream/assemblies/eda/assembly-eda-set-up-rhaap-credential.adoc
+++ b/downstream/assemblies/eda/assembly-eda-set-up-rhaap-credential.adoc
@@ -6,7 +6,7 @@ When {EDAcontroller} is deployed on {PlatformNameShort} {PlatformVers}, you can 
 
 [NOTE]
 ====
-If you deployed {EDAcontroller} with {PlatformNameShort} 2.4, you probably used controller tokens to connect {ControllerName} and {EDAcontroller}. These controller tokens have been deprecated in {PlatformNameShort} {PlatformVers}. Complete the following procedures to xref:eda-set-up-rhaap-credential[set up new {PlatformName} credentials].
+If you deployed {EDAcontroller} with {PlatformNameShort} 2.4, you probably used controller tokens to connect {ControllerName} and {EDAcontroller}. These controller tokens have been deprecated in {PlatformNameShort} {PlatformVers}. Complete the following procedures to delete controller tokens and their associated rulebook activations before setting up {PlatformName} credentials.
 ====
 
 include::eda/con-replacing-controller-tokens.adoc[leveloffset=+1]
