Further minor corrections to UG

--- a/downstream/assemblies/platform/assembly-controller-credentials.adoc
+++ b/downstream/assemblies/platform/assembly-controller-credentials.adoc
@@ -22,7 +22,7 @@ If a user moves to a different team or leaves the organization, you do not have 
 [NOTE]
 ====
 {ControllerNameStart} encrypts passwords and key information in the database and never makes secret information visible through the API. 
-For further information, see the link:{URLControllerAdminGuide}[_{ControllerAG}_].
+For further information, see link:{URLControllerAdminGuide}[_{ControllerAG}_].
 ====
 
 == How credentials work
