--- a/downstream/assemblies/platform/assembly-ug-controller-workflow-job-templates.adoc
+++ b/downstream/assemblies/platform/assembly-ug-controller-workflow-job-templates.adoc
@@ -29,7 +29,7 @@ image::ug-wf-templates-home.png[Workflow templates home]
 Workflow templates can be used as building blocks for another workflow template. 
 You can enable *Prompt on Launch* by setting up several settings in a workflow template, which you can edit at the workflow job template level.
 These do not affect the values assigned at the individual workflow template level. 
-For further instructions, see the xref:controller-workflow-visualizer[Workflow Visualizer] section.
+For further instructions, see the xref:controller-workflow-visualizer[Workflow visualizer] section.
 ====
 
 include::platform/proc-controller-create-workflow-template.adoc[leveloffset=+1]
