--- a/downstream/modules/platform/proc-controller-add-source.adoc
+++ b/downstream/modules/platform/proc-controller-add-source.adoc
@@ -101,7 +101,7 @@ The *Notifications* tab is only present when you have saved the newly-created so
 ====
 . If notifications are already set up, use the toggles to enable or disable the notifications to use with your particular source.
 For more information, see xref:controller-enable-disable-notifications[Enable and Disable Notifications].
-. If you have not set up notifications, see xref:controller-notifications[Notifications] for more information.
+. If you have not set up notifications, see xref:controller-notifications[Notifiers] for more information.
 . Review your entries and selections.
 . Click btn:[Save].
 
