--- a/downstream/modules/platform/proc-controller-adding-new-inventory.adoc
+++ b/downstream/modules/platform/proc-controller-adding-new-inventory.adoc
@@ -23,7 +23,7 @@ The *Inventories* window displays a list of the inventories that are currently a
 * *Organization*: Required. Choose among the available organizations.
 * Only applicable to Smart Inventories: *Smart host filter*: Populate the hosts for this inventory by using a search filter. 
 +
-_Example_ 
+.Example
 +
 name__icontains=RedHat.
 +
