--- a/downstream/modules/platform/proc-controller-define-schedule-rules.adoc
+++ b/downstream/modules/platform/proc-controller-define-schedule-rules.adoc
@@ -20,7 +20,7 @@ For more information, see the link:https://datatracker.ietf.org/doc/html/rfc5545
 * *Count*: The number of times this rule should be used.
 * *Until*: Use this rule until the specified date and time
 
-Click btn:[Save rule]
+Click btn:[Save rule].
 The *Schedule Rules* summary page is displayed.
 
 Click btn:[Add rule] to add additional rules.
