--- a/downstream/modules/platform/proc-controller-sourced-from-project.adoc
+++ b/downstream/modules/platform/proc-controller-sourced-from-project.adoc
@@ -16,7 +16,8 @@ Use the following procedure to configure a project-sourced inventory:
 
 * Optional: *Source control branch/tag/commit*: Enter the SCM branch, tags, commit hashes, arbitrary refs, or revision number (if applicable) from the source control (Git or Subversion) to checkout.
 +
-This field only displays if the sourced project has the *Allow branch override* option checked. For further information, see xref:proc-scm-git-subversion[SCM Types - Git and Subversion].
+This field only displays if the sourced project has the *Allow branch override* option checked. 
+For further information, see xref:proc-scm-git-subversion[SSCM Types - Configuring playbooks to use Git and Subversion].
 +
 image:projects-create-scm-project-branch-override-checked.png[Allow branch override]
 +
