--- a/downstream/modules/platform/proc-controller-view-jobs-associated-with-instance-group.adoc
+++ b/downstream/modules/platform/proc-controller-view-jobs-associated-with-instance-group.adoc
@@ -17,4 +17,4 @@ Each job displays the following details:
 
 .Additional resources
 The instances are run in accordance with instance group policies.
-For more information, see xref:controller-instance-group-policies[Instance Group Policies].
+For more information, see xref:controller-instance-group-policies[Instance group policies].
