--- a/downstream/assemblies/platform/assembly-ug-controller-instance-groups.adoc
+++ b/downstream/assemblies/platform/assembly-ug-controller-instance-groups.adoc
@@ -10,8 +10,8 @@ image::ug-instance-groups_list_view.png[Instance groups list view]
 
 .Additional resources
 
-* For more information about the policy or rules associated with instance groups, see the xref:con-controller-instance-groups[Instance Groups] section of the _{ControllerAG}_.
-* For more information about connecting your instance group to a container, see xref:controller-container-groups[Container Groups].
+* For more information about the policy or rules associated with instance groups, see the xref:con-controller-instance-groups[Instance groups] section of the _{ControllerAG}_.
+* For more information about connecting your instance group to a container, see xref:controller-container-groups[Container groups].
 
 include::platform/proc-controller-create-instance-group.adoc[leveloffset=+1]
 include::platform/proc-controller-associate-instances-to-instance-group.adoc[leveloffset=+2]
