--- a/downstream/modules/platform/con-controller-workflow-visualizer.adoc
+++ b/downstream/modules/platform/con-controller-workflow-visualizer.adoc
@@ -3,4 +3,4 @@
 = Workflow visualizer
 
 The Workflow Visualizer provides a graphical way of linking together job templates, workflow templates, project syncs, and inventory syncs to build a workflow template. 
-Before you build a workflow template, see the xref:controller-workflows[Workflows] section for considerations associated with various scenarios on parent, child, and sibling nodes.
+Before you build a workflow template, see the xref:controller-workflows[Workflows in {ControllerName}] section for considerations associated with various scenarios on parent, child, and sibling nodes.
