--- a/downstream/modules/platform/proc-controller-create-container-group.adoc
+++ b/downstream/modules/platform/proc-controller-create-container-group.adoc
@@ -94,7 +94,7 @@ oc get secret $SA_SECRET -o json | jq '.data["ca.crt"]' | xargs | base64 --decod
 . Use the contents of `containergroup-sa.token` and `containergroup-ca.crt` to provide the information for the xref:ref-controller-credential-openShift[OpenShift or Kubernetes API Bearer Token] required for the container group.
 
 To create a container group, create an xref:ref-controller-credential-openShift[OpenShift or Kubernetes API Bearer Token] credential to use with your container group.
-For more information, see xref:controller-create-credential[Creating a credential].
+For more information, see xref:controller-create-credential[Creating new credentials].
 
 .Procedure
 
