--- a/downstream/modules/platform/proc-scm-git-subversion.adoc
+++ b/downstream/modules/platform/proc-scm-git-subversion.adoc
@@ -24,8 +24,7 @@ For more information, see xref:controller-job-branch-overriding[Job branch overr
 * *Delete* - Deletes the local repository in its entirety before  performing an update. 
 Depending on the size of the repository this can significantly increase the amount of time required to complete an update.
 * *Track submodules* - Tracks the latest commit. There is more information in the tooltip image:question_circle.png[Tooltip,15,15].
-* *Update revision on launch* - Updates the revision of the project to the current revision in the remote source control, and caching the roles directory from link:https://docs.ansible.com/automation-controller/latest/html/userguide/projects.html#ug-galaxy[Galaxy]  or
-xref:ref-projects-collections-support[Collections support]. 
+* *Update revision on launch* - Updates the revision of the project to the current revision in the remote source control, and caching the roles directory from xref:ref-projects-galaxy-support[Ansible Galaxy support] or xref:ref-projects-collections-support[Collections support]. 
 {ControllerNameStart} ensures that the local revision matches and that the roles and collections are up-to-date with the last update.
 In addition, to avoid job overflows if jobs are spawned faster than the project can synchronize, selecting this enables you to configure a Cache Timeout to cache previous project synchronizations for a given number of seconds.
 * *Allow branch override* - Enables a job template or an inventory source that uses this project to start with a specified SCM branch or revision other than that of the project. 
@@ -34,11 +33,11 @@ For more information, see xref:controller-job-branch-overriding[Job branch overr
 //image:projects-create-scm-project-branch-override-checked.png[Override options]
 . Click btn:[Save project].
 
-[TIP]
-====
-Using a GitHub link is an easy way to use a playbook. 
-To help get you started, use the `helloworld.yml` file available link:https://github.com/ansible/tower-example.git[here].
+//[TIP]
+//====
+//Using a GitHub link is an easy way to use a playbook. 
+//To help get you started, use the `helloworld.yml` file available link:https://github.com/ansible/tower-example.git[here].
 
 //This link offers a very similar playbook to the one created manually in the instructions found in link:{BaseURL}/red_hat_ansible_automation_platform/{PlatformVers}/html/getting_started_with_automation_controller/index[{ControllerGS}]. 
 //Using it will not alter or harm your system in any way.
-====
+//====
