--- a/downstream/modules/eda/con-replacing-controller-tokens.adoc
+++ b/downstream/modules/eda/con-replacing-controller-tokens.adoc
@@ -3,4 +3,4 @@
 = Replacing controller tokens in {PlatformName} {PlatformVers}
 
 
-To use {EDAcontroller} in {PlatformName} {PlatformVers}, you must replace legacy controller tokens configured in your environment with {PlatformName} credentials since controller tokens have been deprecated.
+To use {EDAcontroller} in {PlatformName} {PlatformVers}, you must replace legacy controller tokens configured in your environment with {PlatformName} credentials because controller tokens have been deprecated.
