--- a/downstream/modules/hub/con-offline-token-active.adoc
+++ b/downstream/modules/hub/con-offline-token-active.adoc
@@ -3,13 +3,13 @@
 
 = Keeping your offline token active
 
-Offline tokens expire after 30 days of inactivity. You can keep your offline token from expiring by periodically refreshing your offline token.
+Offline tokens expire after 30 days of inactivity. You can keep your offline token from expiring by keeping it active. 
 
-Keeping an online token active is useful when an application performs an action on behalf of the user; for example, this allows the application to perform a routine data backup when the user is offline.
+Keeping an offline token active is useful when an application performs an action on behalf of the user; for example, this allows the application to perform a routine data backup when the user is offline.
 
 [NOTE]
 ====
-If your offline token expires, you must request a new one.
+If your offline token expires, you must xref:proc-create-api-token[obtain a new one].
 ====
 
 .Procedure
