aap-33475 2.4 specific edits

--- a/downstream/assemblies/platform/assembly-installing-hub-operator.adoc
+++ b/downstream/assemblies/platform/assembly-installing-hub-operator.adoc
@@ -36,6 +36,16 @@ Use this procedure to install the {HubName} operator.
 
 . Navigate to menu:Operators[Installed Operators].
 . Locate the *Automation hub* entry, then click btn:[Create instance].
+. Click btn:[Form view].
+. Enter the name of the new controller.
+. Optional: Add any labels necessary.
+. Click btn:[Advanced configuration].
+. From the *PostgreSQL container storage requirements* drop down menu, select *requests*:
+.. Enter "100Gi" in the *storage* field.
+. From the *PostgreSQL container resource requirements* drop down menu, select *requests*: 
+.. Enter "200" in the *cpu* field.
+.. Enter "512Mi" in the *memory* field.
+
 
 include::platform/con-storage-options-for-operator-installation-on-ocp.adoc[leveloffset=+2]
 include::platform/proc-provision-ocp-storage-with-readwritemany.adoc[leveloffset=+3]
