--- a/downstream/modules/platform/proc-creating-a-secret.adoc
+++ b/downstream/modules/platform/proc-creating-a-secret.adoc
@@ -33,6 +33,6 @@ stringData:
 +
 <1> This name is used in the next step when creating the {HubName} instance.
 <2> If the secret was changed when creating the Keycloak client for {HubName} be sure to change this value to match.
-<3> Enter the value of the `public_key` copied in xref:proc-installing-the-ansible-platform-operator_{context}[Installing the {PlatformNameShort} Operator].
+<3> Enter the value of the `public_key` for your {OperatorPlatformNameShort} deployment.
 
 . Click btn:[Create] and wait for the process to complete.
