--- a/downstream/modules/platform/proc-creating-controller-form-view.adoc
+++ b/downstream/modules/platform/proc-creating-controller-form-view.adoc
@@ -12,9 +12,11 @@ Use this procedure to create your {ControllerName} using the form-view.
 . Enter *Hostname* of the instance. The hostname is optional. The default hostname will be generated based upon the deployment name you have selected.
 . Enter the *Admin account username*.
 . Enter the *Admin email address*.
-. Under the *Admin password secret* drop-down menu, select the secret.
-. Under *Database configuration secret* drop-down menu, select the secret.
-. Under *Old Database configuration secret* drop-down menu, select the secret.
-. Under *Secret key secret* drop-down menu, select the secret.
-. Under *Broadcast Websocket Secret* drop-down menu, select the secret.
+. From the *Admin password secret* drop-down menu, select the secret.
+. From the *Database configuration secret* drop-down menu, select the secret.
+. From the *Old Database configuration secret* drop-down menu, select the secret.
+. From the *Secret key secret* drop-down menu, select the secret.
+. From the *Broadcast Websocket Secret* drop-down menu, select the secret.
 . Enter any *Service Account Annotations* necessary.
+. From the *PostgreSQL Container Storage Requirements* drop down menu, select *requests* and enter "100Gi" in the *storage* field.
+. Click btn:[Create].
