--- a/downstream/modules/platform/proc-deploy-eda-controller-with-aap-operator-ocp.adoc
+++ b/downstream/modules/platform/proc-deploy-eda-controller-with-aap-operator-ocp.adoc
@@ -46,6 +46,15 @@ When you activate an {EDAName} rulebook under standard conditions, it uses appro
 extra_settings:
   - setting: EDA_MAX_RUNNING_ACTIVATIONS
     value: '12'
+database:
+  resource_requirements:
+    requests:
+      cpu: 200m
+      memory: 512Mi
+  storage_requirements:
+    requests:
+      storage: 100Gi
+
 ----
 +
 . Click btn:[Create].
