--- a/downstream/modules/platform/proc-configuring-controller-image-pull-policy.adoc
+++ b/downstream/modules/platform/proc-configuring-controller-image-pull-policy.adoc
@@ -32,6 +32,12 @@ Under *Image Pull Policy*, click on the radio button to select
 .. Under *Limits*, and *Requests*, enter values for *CPU cores*, *Memory*, and *Storage*.
 . To display the *PostgreSQL container storage requirements (when using a managed instance)* drop-down list, click the arrow.
 .. Under *Limits*, and *Requests*, enter values for *CPU cores*, *Memory*, and *Storage*.
++
+[NOTE]
+====
+Red{nbsp}Hat recommends using 100Gi for your storage requirements to prevent undersized databases in your production deployments.
+====
++
 . Under Replicas, enter the number of instance replicas.
 . Under *Remove used secrets on instance removal*, select *true* or *false*. The default is false.
 . Under *Preload instance with data upon creation*, select *true* or *false*. The default is true.
