Add release note entry for automation analytics opt in
Release notes update for Automation Analytics opt in

https://issues.redhat.com/browse/AAP-31286

--- a/downstream/titles/release-notes/topics/aap-25.adoc
+++ b/downstream/titles/release-notes/topics/aap-25.adoc
@@ -128,11 +128,11 @@ For more information, see link:https://docs.redhat.com/en/documentation/red_hat_
 
 * Updated the inventory file to include the SSL key and certificate parameters for provided SSL web certificates. (AAP-13728)
 
-* Added an {PlatformNameShort} operator-version label on k8s resources created by the operator. (AAP-31058)
+* Added an {PlatformNameShort} operator-version label on Kubernetes resources created by the operator. (AAP-31058)
 
-* Added installation variables to support Postgres certificate authentication for user-provided databases. (AAP-1095)
+* Added installation variables to support PostgreSQL certificate authentication for user-provided databases. (AAP-1095)
 
-* Updated nginx to version 1.22. (AAP-15128)
+* Updated NGINX to version 1.22. (AAP-15128)
 
 * Added a new configuration endpoint for the REST API. (AAP-13639)
 
@@ -149,6 +149,8 @@ For more information, see link:https://docs.redhat.com/en/documentation/red_hat_
 * The {EDAName} settings are now moved to a dedicated YAML file. (AAP-13276)
 
 * Starting with {PlatformNameShort} 2.5, customers using the controller collection (`ansible.controller`) have the platform collection (`ansible.platform`) as a single point of entry, and must use the platform collection to seed organizations, users, and teams. (AAP-31517)
+
+* Users are opted in for {Analytics} by default when activating {ControllerName} on first time log in. (ANSTRAT-875)
 
 ////
 THE FOLLOWING IS THE SNIPPET FOR TECH. PREVIEW. ADD THIS SNIPPET IF THERE ARE ANY TECH. PREVIEW FEATURES FOR THE RELEASE. AAP 2.5 HAD NO TECH. PREVIEW FEATURES.
