aap-33475 2.5 specific edits

--- a/downstream/modules/platform/proc-operator-deploy-central-config.adoc
+++ b/downstream/modules/platform/proc-operator-deploy-central-config.adoc
@@ -21,6 +21,15 @@ metadata:
   name: example-aap
   namespace: aap
 spec:
+  database:
+    resource_requirements:
+      requests:
+        cpu: 200m
+        memory: 512Mi
+    storage_requirements:
+      requests:
+        storage: 100Gi 
+
   # Platform
   image_pull_policy: IfNotPresent
 
