Final edits to UG

--- a/downstream/assemblies/platform/assembly-controller-best-practices.adoc
+++ b/downstream/assemblies/platform/assembly-controller-best-practices.adoc
@@ -20,7 +20,7 @@ For more information, see the link https://docs.ansible.com/ansible/latest/tips_
 [NOTE]
 ====
 * Avoid using the playbooks `vars_prompt` feature, as {ControllerName} does not interactively permit `vars_prompt` questions. 
-If you cannot avoid using `vars_prompt`, see the xref:controller-surveys-in-job-templates[Surveys] functionality.
+If you cannot avoid using `vars_prompt`, see the xref:controller-surveys-in-job-templates[Surveys in job templates] functionality.
 
 * Avoid using the playbooks `pause` feature without a timeout, as {ControllerName} does not permit canceling a pause interactively.
 If you cannot avoid using `pause`, you must set a timeout.
