--- a/downstream/assemblies/platform/assembly-ug-controller-work-with-webhooks.adoc
+++ b/downstream/assemblies/platform/assembly-ug-controller-work-with-webhooks.adoc
@@ -9,7 +9,7 @@ Set up a webhook using the following services:
 
 * xref:controller-set-up-github-webhook[Setting up a GitHub webhook]
 * xref:controller-set-up-gitlab-webhook[Setting up a GitLab webhook]
-* xref:controller-view-payload-output[Viewing a payload output]
+* xref:controller-view-payload-output[Viewing the payload output]
 
 The webhook post-status-back functionality for GitHub and GitLab is designed to work only under certain CI events. 
 Receiving another kind of event results in messages such as the following in the service log:
