--- a/downstream/modules/platform/proc-controller-create-custom-notifications.adoc
+++ b/downstream/modules/platform/proc-controller-create-custom-notifications.adoc
@@ -154,4 +154,4 @@ If you save the notifications template without editing the custom message (or ed
 * For more information, see link:https://docs.ansible.com/ansible/latest/user_guide/playbooks_variables.html#using-variables-with-jinja2[Using variables with Jinja2] in the Ansible documentation.
 * {ControllerNameStart} requires valid syntax to retrieve the correct data to display the messages. 
 
-For a list of supported attributes and the proper syntax construction, see the xref:controller-attributes-custom-notifications[Supported Attributes for Custom Notifications] section.
+For a list of supported attributes and the proper syntax construction, see the xref:controller-attributes-custom-notifications[Supported attributes for custom notifications] section.
