--- a/downstream/modules/platform/proc-controller-set-up-github-webhook.adoc
+++ b/downstream/modules/platform/proc-controller-set-up-github-webhook.adoc
@@ -41,7 +41,7 @@ image::ug-webhooks-webhook-credential.png[GitLab webhook credential]
 . Go to a GitHub repository where you want to configure webhooks and select menu:Settings[].
 . From the navigation panel, select menu:Webhooks[Add webhook].
 . To complete the *Add webhook* page, you must check the *Enable Webhook* option in a job template or workflow job template. 
-For more information, see step 3 in both xref:controller-create-job-template[Creating a job template] and xref:controller-create-workflow-template[Creating a workflow template].
+For more information, see step 3 in both xref:controller-create-job-template[Creating a job template] and xref:controller-create-workflow-template[Creating a workflow job template].
 . Complete the following fields:
 * *Payload URL*: Copy the contents of the *Webhook URL* from the job template and paste it here.
 The results are sent to this address from GitHub.
@@ -56,7 +56,7 @@ image::ug-webhooks-github-repo-choose-events.png[Github repo choose events]
 * *Active*: Leave this checked.
 . Click btn:[Add webhook].
 . When your webhook is configured, it is displayed in the list of webhooks active for your repository, along with the ability to edit or delete it.
-Click on a webhook, to go to the *Manage webhook* screen. 
+Click a webhook, to go to the *Manage webhook* screen. 
 . Scroll to view the delivery attempts made to your webhook and whether they succeeded or failed.
 
 .Additional resources
