--- a/downstream/modules/platform/proc-controller-set-up-gitlab-webhook.adoc
+++ b/downstream/modules/platform/proc-controller-set-up-gitlab-webhook.adoc
@@ -37,7 +37,7 @@ image::ug-gitlab-webhook-credential.png[GitLab webhook credential]
 . Go to a GitLab repository where you want to configure webhooks.
 . From the navigation panel, select menu:Settings[Integrations].
 . To complete the *Add webhook* page, you must check the *Enable Webhook* option in a job template or workflow job template. 
-For more information, see step 3 in both xref:controller-create-job-template[Creating a job template] and xref:controller-create-workflow-template[Creating a workflow template].
+For more information, see step 3 in both xref:controller-create-job-template[Creating a job template] and xref:controller-create-workflow-template[Creating a workflow job template].
 . Complete the following fields:
 * *URL*: Copy the contents of the *Webhook URL* from the job template and paste it here.
 The results are sent to this address from GitLab.
