--- a/downstream/modules/platform/ref-controller-content-sourcing.adoc
+++ b/downstream/modules/platform/ref-controller-content-sourcing.adoc
@@ -28,6 +28,6 @@ The organization's *Create organization* and *Edit organization* windows have an
 image:organizations-galaxy-credentials.png[Create organization]
 
 It is important to specify the order of these credentials as order sets precedence for the sync and lookup of the content. 
-For more information, see link:{URLCentralAuth}/index#proc-controller-create-organization[Creating an organization]. 
+For more information, see link:{URLCentralAuth}/gw-managing-access#proc-controller-create-organization[Creating an organization]. 
 
 For more information about how to set up a project by using collections, see xref:proc-projects-using-collections-with-hub[Using Collections with {HubName}].
