--- a/downstream/modules/platform/ref-controller-credential-gitHub-pat.adoc
+++ b/downstream/modules/platform/ref-controller-credential-gitHub-pat.adoc
@@ -4,7 +4,7 @@
 
 Select this credential to enable you to access GitHub by using a _Personal Access Token_ (PAT), which you can get through GitHub. 
 
-For more information, see xref:controller-set-up-github-webhook[Working with Webhooks].
+For more information, see xref:controller-set-up-github-webhook[Setting up a GitHub webhook].
 
 GitHub PAT credentials require a value in the *Token* field, which is provided in your GitHub profile settings.
 
