--- a/downstream/modules/platform/ref-controller-credential-gitLab-pat.adoc
+++ b/downstream/modules/platform/ref-controller-credential-gitLab-pat.adoc
@@ -4,7 +4,7 @@
 
 Select this credential to enable you to access GitLab by using a _Personal Access Token_ (PAT), which you can get through GitLab. 
 
-For more information, see xref:controller-set-up-github-webhook[Working with Webhooks].
+For more information, see xref:controller-set-up-gitlab-webhook[Setting up a GitLab webhook].
 
 GitLab PAT credentials require a value in the *Token* field, which is provided in your GitLab profile settings.
 
