--- a/downstream/modules/platform/ref-postgresql-requirements.adoc
+++ b/downstream/modules/platform/ref-postgresql-requirements.adoc
@@ -37,8 +37,8 @@ For example, a playbook run every hour (24 times a day) across 250 hosts, with 2
 
 [NOTE]
 ====
-PostgresSQL versions older than v10 might not have ICU support. 
-You must build your postgresql server with ICU support or you may encounter unexpected errors.
+PostgreSQL versions older than v10 might not have ICU support. 
+You must build your PostgreSQL server with ICU support or you may encounter unexpected errors.
 ====
 
 .PostgreSQL configurations
