Adding note on ICU support to 2.4 doc (#2498)
* Adding note on ICU support to 2.4 doc

* PR suggestions

--- a/downstream/modules/platform/ref-postgresql-requirements.adoc
+++ b/downstream/modules/platform/ref-postgresql-requirements.adoc
@@ -35,7 +35,13 @@ For example, a playbook run every hour (24 times a day) across 250 hosts, with 2
 * If not enough space is reserved in the database, the old job runs and facts must be cleaned on a regular basis. For more information, see link:{BaseURL}/red_hat_ansible_automation_platform/{PlatformVers}/html-single/automation_controller_administration_guide/index#assembly-controller-management-jobs[Management Jobs] in the _Automation Controller Administration Guide_.
 |===
 
-.PostgreSQL Configurations
+[NOTE]
+====
+PostgreSQL versions older than v10 might not have ICU support. 
+You must build your PostgreSQL server with ICU support or you may encounter unexpected errors.
+====
+
+.PostgreSQL configurations
 
 Optionally, you can configure the PostgreSQL database as separate nodes that are not managed by the {PlatformName} installer. When the {PlatformNameShort} installer manages the database server, it configures the server with defaults that are generally recommended for most workloads. For more information about the settings you can use to improve database performance, see link:https://docs.ansible.com/automation-controller/latest/html/administration/performance.html#database-settings[Database Settings].
 //-----
