AAP-29905B Tweaked note in assembly for clarification

--- a/downstream/assemblies/eda/assembly-eda-set-up-rhaap-credential.adoc
+++ b/downstream/assemblies/eda/assembly-eda-set-up-rhaap-credential.adoc
@@ -6,7 +6,7 @@ When {EDAcontroller} is deployed on {PlatformNameShort} {PlatformVers}, you can 
 
 [NOTE]
 ====
-If you deployed {EDAcontroller} with {PlatformNameShort} 2.4, you probably used controller tokens to connect {ControllerName} and {EDAcontroller}. These controller tokens have been deprecated in {PlatformNameShort} {PlatformVers}. See xref:replacing-controller-tokens[Replacing controller tokens in Red Hat Ansible Automation Platform 2.5] for more details.
+If you deployed {EDAcontroller} with {PlatformNameShort} 2.4, you probably used controller tokens to connect {ControllerName} and {EDAcontroller}. These controller tokens have been deprecated in {PlatformNameShort} {PlatformVers}. To delete these deprecated controller tokens and the rulebook activations associated with them, complete the following procedures starting with xref:replacing-controller-tokens[Replacing controller tokens in Red Hat Ansible Automation Platform 2.5] before proceeding with xref:eda-set-up-rhaap-credential[Setting up a {PlatformName} credential].
 ====
 
 include::eda/con-replacing-controller-tokens.adoc[leveloffset=+1]
