AAP-34778 Crowdsource Minimalism suggestions

--- a/stories/topics/con-saas-backup-and-diaster-recovery.adoc
+++ b/stories/topics/con-saas-backup-and-diaster-recovery.adoc
@@ -35,5 +35,5 @@ The customer is responsible for any necessary post-deployment network configurat
 ====
 Backup data is not directly accessible to customers. 
 The data is only used in the event of infrastructure failure, not customer configuration errors. 
-Red{nbsp} encourages using configuration-as-code practices to maintain a customer-hosted backup of your configuration.
+Red{nbsp}Hat encourages using configuration-as-code practices to maintain a customer-hosted backup of your configuration.
 ====
