--- a/stories/topics/proc-saas-set-up-public.adoc
+++ b/stories/topics/proc-saas-set-up-public.adoc
@@ -1,6 +1,6 @@
 [id="proc-saas-set-up-public"]
 
-= Public offer
+= Accepting a Public offer
 
 To set up {SaaSonAWS} you must link your {AWS} (AWS) and Red{nbsp}Hat accounts through the AWS marketplace.
 When you link your accounts you can provision and configure your cluster through the Red{nbsp}Hat Hybrid Cloud Console.  
@@ -10,36 +10,48 @@ When you link your accounts you can provision and configure your cluster through
 
 .Procedure
 . Log in to your AWS account.
-. Navigate to the AWS Marketplace.
-. Go to the *Discover products* page.
+. Navigate to the *Discover products* page of the AWS Marketplace.
 +
 [NOTE]
 ====
 If you have already accepted your offer you can find it in the *Manage subscriptions* page.
 ====
 +
-. Search for "{SaaSonAWS}" in the search field. 
+. In the search field search for "{SaaSonAWS}". 
 ** Depending on your region select one of the following: 
 *** For EMEA, select *Red{nbsp}Hat Limited*.
 *** For the rest of the world, select *Red{nbsp}Hat*.
 . Click btn:[View purchase options].
 . Select your desired contract duration.
-. Click btn:[auto renewal settings] if you would like your contract to auto renew.
+. If you would like your contract to auto renew, click btn:[auto renewal settings].
 . Select the contract options.
 . Optional: Add a purchase order number.
 . Click btn:[Create contract].
 . Click btn:[Click here to set up your account]. This redirects you to {RHSSO} where you must:
 .. Create or sign into your Red{nbsp}Hat account.
-.. Link your AWS account to the Red{nbsp}Hat account.
-. This then redirects you to the *Provision environment* page on the Red{nbsp}Hat Hybrid Cloud Console. Here you can start configuring your environment. 
+.. Connect your AWS account to the Red{nbsp}Hat account.
++
+This then redirects you to the *Provision environment* page on the Red{nbsp}Hat Hybrid Cloud Console. Here you can start configuring your environment.
++
 . Enter your AWS account ID and click btn:[Verify].
 +
 This account ID must be the account ID that purchased the offer from the AWS Marketplace. 
 The system does not recognize associated or nested accounts.
 . After your AWS ID is validated click btn:[Next].
-. Select your desired region.
+. Select your required region.
 . Click btn:[Provision].
 
 This redirects you to the *Environment details* page of the *Instances*, where you can see all the details of your created instance.
 Here you can check whether your instance is *Ready* or still in a *Provision in progress* state.
 
+Provisioning your environment can take up to two hours.
+When it is ready, you will receive a confirmation email at the address linked to your account. 
+
+[IMPORTANT]
+====
+Update your password as soon as possible.
+The confirmation email includes a link to your admin password, which you will use to log in and change your password.
+This link is one-time use, so be prepared before clicking it.
+====
+
+If you did not receive the email or the initial admin password has expired, you must to submit a link:https://access.redhat.com/support[support ticket] and the Red{nbsp}Hat team will assist you with next steps.
