--- a/stories/topics/ref-saas-egress-model.adoc
+++ b/stories/topics/ref-saas-egress-model.adoc
@@ -2,7 +2,7 @@
 = PULL connectivity
 
 Remote automation mesh nodes can access {PlatformNameShort} using a 'polling' or 'pull' model, which does not require opening ingress ports in the firewall.
-This model eliminates the need for hop nodes from your DMZ to private networks if private networks have outbound internet connectivity.
+This model eliminates the need for hop nodes from your demilitarized zone (DMZ) to private networks if private networks have outbound internet connectivity.
 
-.Figure 1 Egress model
-image:mesh_egress.png[Egress model] 
+.Figure 1 Pull model
+image:mesh_egress.png[Pull model] 
