--- a/stories/topics/ref-saas-mesh-ingress-model.adoc
+++ b/stories/topics/ref-saas-mesh-ingress-model.adoc
@@ -1,9 +1,9 @@
 [id="ref-saas-mesh-ingress-model"]
 = PUSH connectivity
 
-Customers can design their automation mesh architecture using the mesh ingress model and configure the communication ports. 
+You can design their automation mesh architecture using the push model and configure the communication ports. 
 The default port is 27199, which must not conflict with other traffic, such as HTTPS. 
 {SaaSonAWSShort} supports current automation mesh features that push communication to both hop nodes and execution nodes.
 
-.Figure 1 Mesh ingress model
-image:mesh_ingress.png[Ingress model] 
+.Figure 1 Push model
+image:mesh_ingress.png[Push model] 
