--- a/stories/assembly-saas-intro.adoc
+++ b/stories/assembly-saas-intro.adoc
@@ -5,7 +5,16 @@ ifdef::context[:parent-context: {context}]
 [id="saas-intro"]
 = Introduction to {SaaSonAWS}
 
-include::topics/con-saas-intro.adoc[leveloffset=+1]
+With the {SaaSonAWS}, you can purchase and deploy {PlatformNameShort} through link:https://aws.amazon.com/marketplace[AWS Marketplace].
+Red{nbsp}Hat configures and provisions an {PlatformNameShort} environment and then maintains it, ensuring reliability and security.
+
+While Red{nbsp}Hat manages the control plane, the execution plane is spread across your domains using automation mesh hop nodes and execution nodes.
+For help with configuring execution nodes see link:{BaseURL}/red_hat_ansible_automation_platform/{PlatformVers}/html/automation_mesh_for_managed_cloud_or_operator_environments/index[Automation mesh for managed cloud or operator environments].
+
+[IMPORTANT]
+====
+Red{nbsp}Hat erases job logs every 30 days.
+====
 
 ifdef::parent-context[:context: {parent-context}]
 ifndef::parent-context[:!context:]
