--- a/stories/assembly-saas-set-up.adoc
+++ b/stories/assembly-saas-set-up.adoc
@@ -4,11 +4,11 @@ ifdef::context[:parent-context: {context}]
 [id="saas-set-up"]
 = Setting up {SaaSonAWS}
 
-include::topics/con-saas-automation.adoc[leveloffset=+1]
-include::topics/ref-saas-egress-model.adoc[leveloffset=+2]
-include::topics/ref-saas-mesh-ingress-model.adoc[leveloffset=+2]
+To set up {SaaSonAWS} you must first accept an offer. You can accept a public offer through the AWS marketplace, or a private offer directly from a Red{nbsp}Hat seller. 
 
+include::topics/proc-saas-set-up-public.adoc[leveloffset=+1]
+include::topics/proc-saas-set-up-private.adoc[leveloffset=+1]
+//include::topics/con-saas-provisioning.adoc[leveloffset=+1]
 
 ifdef::parent-context[:context: {parent-context}]
 ifndef::parent-context[:!context:]
-
