--- a/stories/topics/proc-saas-set-up-private.adoc
+++ b/stories/topics/proc-saas-set-up-private.adoc
@@ -1,18 +1,18 @@
 [id="proc-saas-set-up-private"]
 
-= Private offer
-A private offer includes specific pricing and licensing terms for your account and has an expiration date. If you do not accept the offer by that date, you will either be moved to the public offer for the product or no longer subscribed to it.
+= Accepting a Private offer
+A private offer is sent to you directly from a Red{nbsp}Hat seller. A private offer includes specific pricing and licensing terms for your account and has an expiration date. If you do not accept the offer by that date, you will either be moved to the public offer for the product or no longer subscribed to it.
 
 .Prerequisites
 * An AWS Account
+* A Red{nbsp}Hat seller issues you a purchase order and provides it to you by email.
+** For manual steps see link:https://docs.aws.amazon.com/marketplace/latest/buyerguide/buyer-private-offers.html#buyer-private-offers-subscribing[Viewing and subscribing to a private offer] page on the AWS Marketplace
 
 .Procedure
-. A Red{nbsp}Hat seller issues you a purchase order and provides it to you by email.
-** For manual steps see link:https://docs.aws.amazon.com/marketplace/latest/buyerguide/buyer-private-offers.html#buyer-private-offers-subscribing[Viewing and subscribing to a private offer] page on the AWS Marketplace
-. Click the link in the email to accept the terms.
+
+. Click the link in the private offer email to accept the terms.
 . Log in to your AWS account.
-. Navigate to the AWS Marketplace.
-. Go to the *Private Offers* page. 
+. Navigate to the *Private Offers* page of the AWS Marketplace.
 +
 [NOTE]
 ====
@@ -24,15 +24,28 @@ If you have already accepted your offer you can find it in the *Manage subscript
 . Click btn:[Click Set up your account]. This redirects you to {RHSSO} where you must:
 .. Create or sign into your Red{nbsp}Hat account.
 .. Connect your AWS account to the Red{nbsp}Hat account.
-... If this is your first time connecting your accounts you must accept the terms and conditions and click btn:[Connect accounts].
-. This then redirects you to the *Provision environment* page on the Red{nbsp}Hat Hybrid Cloud Console. Here you can start configuring your environment. 
+... If you are connecting to your accounts for the first time you must accept the terms and conditions and click btn:[Connect accounts].
++
+This then redirects you to the *Provision environment* page on the Red{nbsp}Hat Hybrid Cloud Console. Here you can start configuring your environment.
++
 . Enter your AWS account ID and click btn:[Verify].
 +
 This account ID must be the account ID that purchased the offer from the AWS marketplace. The system does not recognize associated or nested accounts.
 . After your AWS ID is validated click btn:[Next].
-. Select your desired region and click btn:[Next].
+. Select your required region and click btn:[Next].
 . Click btn:[Provision].
 
 This redirects you to the *Environment details* page of the *Instances*, where you can see all the details of your created instance.
 Here you can check whether your instance is *Ready* or still in a *Provision in progress* state.
  
+Provisioning your environment can take up to two hours.
+When it is ready, you will receive a confirmation email at the address linked to your account. 
+
+[IMPORTANT]
+====
+Update your password as soon as possible.
+The confirmation email includes a link to your admin password, which you will use to log in and change your password.
+This link is one-time use, so be prepared before clicking it.
+====
+
+If you did not receive the email or the initial admin password has expired, you must to submit a link:https://access.redhat.com/support[support ticket] and the Red{nbsp}Hat team will assist you with next steps.
