Applying updates from AAP-35076

--- a/downstream/modules/platform/ref-operator-crs.adoc
+++ b/downstream/modules/platform/ref-operator-crs.adoc
@@ -2,6 +2,31 @@
 
 = Custom resources
 
+== aap-existing-controller-and-hub-new-eda.yml
+
+[subs="+attributes"]
+----
+---
+apiVersion: aap.ansible.com/v1alpha1
+kind: AnsibleAutomationPlatform
+metadata:
+  name: myaap
+spec:
+  # Development purposes only
+  no_log: false
+
+  controller:
+    name: existing-controller
+    disabled: false
+
+  eda:
+    disabled: false
+
+  hub:
+    name: existing-hub
+    disabled: false
+----
+
 == aap-all-defaults.yml
 
 [subs="+attributes"]
