AAP-35119 updated overview to tested topologies

--- a/downstream/assemblies/topologies/assembly-overview-tested-deployment-models.adoc
+++ b/downstream/assemblies/topologies/assembly-overview-tested-deployment-models.adoc
@@ -4,6 +4,12 @@
 
 Red Hat tests {PlatformNameShort} {PlatformVers} with a defined set of topologies to give you opinionated deployment options. While it is possible to install the {PlatformNameShort} on different infrastructure topologies and with different environment configurations, Red Hat provides full support for the topologies outlined in this document.
 
+Red Hat recommends that customers always deploy all components of {PlatformNameShort} so that all features and capabilities are available for use without the need to take further action.
+
+Red Hat tests and recommends installing {PlatformNameShort} {PlatformVers} based on a defined set of infrastructure topologies or reference architectures. Enterprise organizations should use one of the enterprise topologies for production deployments to ensure the highest level of uptime, performance, and continued scalability. Organizations or deployments that are resource constrained can use a "growth" topology.
+
+It is possible to install the {PlatformNameShort} on different infrastructure topologies and with different environment configurations; Red Hat does not fully test topologies outside of published reference architectures, and recommends that all new deployments use a tested topology.
+
 == Installation and deployment models
 
 The following table outlines the different ways to install or deploy {PlatformNameShort}:
