AAP-30113 Enhancements for the decision environments chapter

--- a/downstream/modules/eda/proc-eda-build-a-custom-decision-environment.adoc
+++ b/downstream/modules/eda/proc-eda-build-a-custom-decision-environment.adoc
@@ -25,13 +25,20 @@ This image is built from a base image provided by Red Hat called `de-minimal` at
 Red Hat recommends using `de-minimal` as the base image with {Builder} to build your custom decision environments.
 ====
 
+[IMPORTANT]
+====
+Use the correct {EDAcontroller} decision environment in {PlatformNameShort} {PlatformVers} to prevent rulebook activation failure.
+* If you want to connect Event-Driven Ansible controller to Ansible Automation Platform 2.4, you must use `registry.redhat.io/ansible-automation-platform-24/de-supported-rhel8:latest`.
+* If you want to connect Event-Driven Ansible controller to AAP 2.5, you must use `registry.redhat.io/ansible-automation-platform-25/de-supported-rhel8:latest`.
+====
+
 The following is an example of the {Builder} definition file that uses `de-minimal` as a base image to build a custom decision environment with the ansible.eda collection:
 -----
 version: 3
 
 images:
   base_image:
-    name: 'registry.redhat.io/ansible-automation-platform-24/de-minimal-rhel8:latest'
+    name: 'registry.redhat.io/ansible-automation-platform-25/de-minimal-rhel8:latest'
 
 dependencies:
   galaxy:
@@ -50,7 +57,7 @@ version: 3
 
 images:
   base_image:
-    name: 'registry.redhat.io/ansible-automation-platform-24/de-minimal-rhel8:latest'
+    name: 'registry.redhat.io/ansible-automation-platform-25/de-minimal-rhel8:latest'
 
 dependencies:
   galaxy:
