--- a/downstream/modules/eda/proc-eda-build-a-custom-decision-environment.adoc
+++ b/downstream/modules/eda/proc-eda-build-a-custom-decision-environment.adoc
@@ -17,7 +17,7 @@ You can create a custom decision environment for {EDAName} that provides a custo
 .Procedure
 
 * Add the `de-supported` decision environment. 
-This image is built from a base image provided by Red Hat called `de-minimal` at link:https://catalog.redhat.com/software/containers/ansible-automation-platform-24/de-supported-rhel9/6449642e3993031ccdf4cf19[{PlatformNameShort} supported decision environment].
+This image is built from a base image provided by Red Hat called `de-minimal` at link:https://catalog.redhat.com/software/containers/ansible-automation-platform-25/de-supported-rhel9/650a5674ad524b664b693729[{PlatformNameShort} supported decision environment].
 
 +
 [NOTE]
@@ -27,10 +27,10 @@ Use `de-minimal` as the base image with {Builder} to build your custom decision 
 
 [IMPORTANT]
 ====
-* Use the correct {EDAcontroller} decision environment in {PlatformNameShort} {PlatformVers} to prevent rulebook activation failure.
+* Use the correct {EDAcontroller} decision environment in {PlatformNameShort} to prevent rulebook activation failure.
 
-** If you want to connect {EDAcontroller} to {PlatformNameShort} 2.4, you must use link:https://catalog.redhat.com/software/containers/ansible-automation-platform-24/de-supported-rhel9/6449642e3993031ccdf4cf19[Ansible Automation Platform supported decision environment]
-** If you want to connect {EDAcontroller} to {PlatformNameShort} {PlatformVers}, you must use link:https://catalog.redhat.com/software/containers/ansible-automation-platform-25/de-supported-rhel9/650a5674ad524b664b693729[Ansible Automation Platform supported execution environment]
+** If you want to connect {EDAcontroller} to {PlatformNameShort} 2.4, you must use link:https://catalog.redhat.com/software/containers/ansible-automation-platform-24/de-supported-rhel9/6449642e3993031ccdf4cf19[{PlatformNameShort} 2.4 supported decision environment]
+** If you want to connect {EDAcontroller} to {PlatformNameShort} {PlatformVers}, you must use link:https://catalog.redhat.com/software/containers/ansible-automation-platform-25/de-supported-rhel9/650a5674ad524b664b693729[{PlatformNameShort} {PlatformVers} supported execution environment]
 ====
 
 The following is an example of the {Builder} definition file that uses `de-minimal` as a base image to build a custom decision environment with the ansible.eda collection:
