--- a/downstream/modules/platform/proc-operator-create_crs.adoc
+++ b/downstream/modules/platform/proc-operator-create_crs.adoc
@@ -50,7 +50,7 @@ The recommended approach however, is to upgrade the operator and use the default
 ====
 
 .Verification
-Go to your {OperatorPlatformNameShort} deployment and click btn:[All instances] to verify if all instances deployed correctly.
+Navigate to your {OperatorPlatformNameShort} deployment and click btn:[All instances] to verify whether all instances have deployed correctly.
 You should see the *{PlatformNameShort}* instance and the deployed *AutomationController*, *EDA*, and *AutomationHub* instances here.
 
-Alternatively you can check by the command line, run: `oc get route` 
+Alternatively, you can verify whether all instances deployed correctly by running `oc get route` in the command line.
