adding in missing brackets

--- a/downstream/modules/platform/proc-operator-create_crs.adoc
+++ b/downstream/modules/platform/proc-operator-create_crs.adoc
@@ -8,7 +8,7 @@ After upgrading to the latest version of {OperatorPlatformNameShort} on {OCPShor
 This example outlines the steps to deploy a new {EDAName} setup after upgrading to the latest version, with existing {ControllerName} and {HubName} deployments already in place.
 
 
-The xref:appendix-operator-crs_performance-considerations[Appendix] contains more examples of PlatformNameShort CRs for different deployments.
+The xref:appendix-operator-crs_performance-considerations[Appendix] contains more examples of {PlatformNameShort} CRs for different deployments.
 
 . Log in to {OCP}.
 . Navigate to menu:Operators[Installed Operators].
